@@ -47,6 +47,7 @@ Changes in current version:
  o udpate documentation of event_loop and event_base_loop; from Tani Hosokawa.
  o simplify evbuffer by removing orig_buffer
  o do not insert event into list when evsel->add fails
+ o add support for PUT/DELETE requests; from Josh Rotenberg
 
 
 Changes in 1.4.0:
